add css and some turbo frame

--- a/app/views/quotes/new.html.slim
+++ b/app/views/quotes/new.html.slim
@@ -4,4 +4,5 @@
   .header
     h1 New quote 
 
-  = render 'form', quote: @quote
+  = turbo_frame_tag 'second_frame' do 
+    = render 'form', quote: @quote
