--- a/app/views/quotes/index.html.slim
+++ b/app/views/quotes/index.html.slim
@@ -2,4 +2,5 @@ main.container
   .header 
     h1 Quotes
     = link_to 'New quote', new_quote_path, class: 'btn btn--primary'
-  = render @quotes
+  = turbo_frame_tag 'second_frame' do 
+    = render @quotes
