start practice with turbo stream

--- a/app/views/quotes/edit.html.slim
+++ b/app/views/quotes/edit.html.slim
@@ -3,5 +3,5 @@
 
   .header
     h1 Edit quote 
-
-  = render 'form', quote: @quote
+  = turbo_frame_tag @quote do 
+    = render 'form', quote: @quote
