--- a/app/views/quotes/index.html.slim
+++ b/app/views/quotes/index.html.slim
@@ -1,6 +1,9 @@
+= turbo_stream_from 'quotes'
+
 main.container 
   .header 
     h1 Quotes
-    = link_to 'New quote', new_quote_path, class: 'btn btn--primary'
-  = turbo_frame_tag 'second_frame' do 
+    = link_to 'New quote', new_quote_path, class: 'btn btn--primary', data: { turbo_frame: dom_id(Quote.new) }
+  = turbo_frame_tag Quote.new
+  = turbo_frame_tag 'quotes' do
     = render @quotes
