--- a/app/views/quotes/new.html.slim
+++ b/app/views/quotes/new.html.slim
@@ -4,5 +4,5 @@
   .header
     h1 New quote 
 
-  = turbo_frame_tag 'second_frame' do 
+  = turbo_frame_tag @quote do
     = render 'form', quote: @quote
