add user, company, security turbo stream, add flash message using Hotwire

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -2,6 +2,7 @@
 
 @import "config/variables";
 @import "config/reset";
+@import "config/animations";
 
 @import "components/btn";
 @import "components/error_message";
@@ -13,3 +14,5 @@
 @import "layouts/header";
 
 @import "components/turbo_progress_bar";
+@import "components/navbar";
+@import "components/flash";
