--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -16,3 +16,4 @@
 @import "components/turbo_progress_bar";
 @import "components/navbar";
 @import "components/flash";
+@import "components/empty_state";
