--- a/app/views/quotes/index.html.slim
+++ b/app/views/quotes/index.html.slim
@@ -6,4 +6,5 @@ main.container
     = link_to 'New quote', new_quote_path, class: 'btn btn--primary', data: { turbo_frame: dom_id(Quote.new) }
   = turbo_frame_tag Quote.new
   = turbo_frame_tag 'quotes' do
+    = render "quotes/empty_state"
     = render @quotes
