add line_date_item within quote CRUD with Hotwire

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -4,16 +4,16 @@
 @import "config/reset";
 @import "config/animations";
 
+@import "layouts/container";
+@import "layouts/header";
+
 @import "components/btn";
 @import "components/error_message";
 @import "components/form";
 @import "components/visually_hidden";
 @import "components/quote";
-
-@import "layouts/container";
-@import "layouts/header";
-
 @import "components/turbo_progress_bar";
 @import "components/navbar";
 @import "components/flash";
 @import "components/empty_state";
+@import "components/line_item_date";
