--- a/app/views/quotes/_form.html.slim
+++ b/app/views/quotes/_form.html.slim
@@ -1,7 +1,5 @@
 = simple_form_for quote, html: { class: 'quote form' } do |f|
-  - if quote.errors.any?
-    .error_message 
-      = quote.errors.full_messages.to_sentence.capitalize
+  = form_error_notification(quote)
 
   = f.input :name, input_html: { auto_focus: true }
   = link_to "Cancel", quotes_path, class: 'btn btn--light'
