--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -17,3 +17,4 @@
 @import "components/flash";
 @import "components/empty_state";
 @import "components/line_item_date";
+@import "components/line_item";
