--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -18,3 +18,6 @@
 @import "components/empty_state";
 @import "components/line_item_date";
 @import "components/line_item";
+@import "components/quote_total";
+
+@import "utilities/margins";
