--- a/app/views/line_items/_line_item.html.slim
+++ b/app/views/line_items/_line_item.html.slim
@@ -11,7 +11,7 @@
       = line_item.quantity
     .line-item__price 
       = number_to_currency line_item.unit_price 
-    .line_item__actions 
-      = button_to "Delete", [quote, line_item_date, line_item], method: :delete, class: "btn btn--light"
-      = link_to "Edit", [:edit, quote, line_item_date, line_item], class: "btn btn--light"
+    .line-item__actions 
+      = button_to show_svg('delete.svg'), [quote, line_item_date, line_item], method: :delete, class: "btn btn--light btn--icon"
+      = link_to show_svg('edit.svg'), [:edit, quote, line_item_date, line_item], class: "btn btn--light btn--icon"
     
