--- a/app/views/quotes/_quote.html.slim
+++ b/app/views/quotes/_quote.html.slim
@@ -2,5 +2,5 @@
   .quote 
     = link_to quote.name, quote_path(quote), data: { turbo_frame: '_top' }
     .quote__actions 
-      = button_to 'Delete', quote_path(quote), method: :delete, class: 'btn btn--light'
-      = link_to 'Edit', edit_quote_path(quote), class: 'btn btn--light'
+      = button_to show_svg('delete.svg'), quote_path(quote), method: :delete, class: 'btn btn--light'
+      = link_to show_svg('edit.svg'), edit_quote_path(quote), class: 'btn btn--light'
