finalize with custom login signup form

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -6,6 +6,8 @@
 
 @import "layouts/container";
 @import "layouts/header";
+@import "layouts/card";
+@import "layouts/aligns";
 
 @import "components/btn";
 @import "components/error_message";
@@ -21,3 +23,4 @@
 @import "components/quote_total";
 
 @import "utilities/margins";
+@import "utilities/texts";
