--- a/app/assets/stylesheets/utilities/_margins.scss
+++ b/app/assets/stylesheets/utilities/_margins.scss
@@ -1,3 +1,11 @@
 .mb-xxxxl {
   margin-bottom: var(--space-xxxxl);
 }
+
+.mb-m {
+  margin-bottom: var(--space-m);
+}
+
+.mt-m {
+  margin-top: var(--space-m);
+}
