--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -1,8 +1,10 @@
 main.container 
-  h1 Quote editor 
-  p A blazing fast quote editor built with Hotwire 
+  .card
+    h1.mb-m.text-center.text-color__linear Quote editor 
+    p.mb-m.text-center A blazing fast quote editor built with Hotwire 
 
-  - if user_signed_in?
-    = link_to "View quotes", quotes_path, class: "btn btn--dark"
-  - else 
-    = link_to "Sign in", new_user_session_path, class: "btn btn--dark"
+    .center
+      - if user_signed_in?
+        = link_to "View quotes", quotes_path, class: "btn btn--dark"
+      - else 
+        = link_to "Log in", new_user_session_path, class: "btn btn--dark"
