--- a/app/views/quotes/_form.html.slim
+++ b/app/views/quotes/_form.html.slim
@@ -1,6 +1,6 @@
 = simple_form_for quote, html: { class: 'quote form' } do |f|
   = form_error_notification(quote)
 
-  = f.input :name, input_html: { auto_focus: true }
+  = f.input :name, label: false, input_html: { auto_focus: true }
   = link_to "Cancel", quotes_path, class: 'btn btn--light'
   = f.submit class: 'btn btn--secondary'
